[package]
name = "zeromqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rumqttc = { version = "0.11.0"}
tokio = { version = "1.0", features = ["full", "macros"] }
pretty_env_logger = "0.4"
color-backtrace = "0.4"
crossbeam-channel = "0.5"
serde = {version = "1", features = ["derive"]}
envy = "0.4"
jsonwebtoken = "7"
matches = "0.1.8"
rustls = "0.20.2"
rustls-native-certs = "0.6.1"
pretty_assertions = "0.6.1"
#zeromq deps
zmq = ">=0.9.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tmq = "0.3.0"
log = "0.4"